fix alignment in html files in dropdowns demo

--- a/demo/src/app/components/+dropdown/demos/basic/basic.html
+++ b/demo/src/app/components/+dropdown/demos/basic/basic.html
@@ -7,7 +7,6 @@
     <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
     <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
     <li class="divider dropdown-divider"></li>
-    <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a>
-    </li>
+    <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a></li>
   </ul>
 </div>
