--- a/demo/src/app/components/+dropdown/demos/config/config.html
+++ b/demo/src/app/components/+dropdown/demos/config/config.html
@@ -4,9 +4,7 @@
   </button>
   <ul *dropdownMenu class="dropdown-menu" role="menu">
     <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
-    <li role="menuitem"><a class="dropdown-item" href="#">Another action</a>
-    </li>
-    <li role="menuitem"><a class="dropdown-item" href="#">Something else
-      here</a></li>
+    <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
+    <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
   </ul>
 </div>
