--- a/demo/src/app/components/+dropdown/demos/dropup/dropup.html
+++ b/demo/src/app/components/+dropdown/demos/dropup/dropup.html
@@ -4,17 +4,15 @@
   </button>
   <ul *dropdownMenu class="dropdown-menu" role="menu">
     <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
-    <li role="menuitem"><a class="dropdown-item" href="#">Another action</a>
-    </li>
-    <li role="menuitem"><a class="dropdown-item" href="#">Something else
-      here</a></li>
+    <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
+    <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
     <li class="divider dropdown-divider"></li>
-    <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a>
-    </li>
+    <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a></li>
   </ul>
 </div>
-<div class="checkbox"><label>
-  <input type="checkbox" value="true" [(ngModel)]="isDropup"
-         style="display: inline-block;"
-  >{{ isDropup ? 'Is dropup' : 'Is dropdown' }}
-</label></div>
+<div class="checkbox">
+  <label>
+    <input type="checkbox" value="true" [(ngModel)]="isDropup" style="display: inline-block;">
+    {{ isDropup ? 'Is dropup' : 'Is dropdown' }}
+  </label>
+</div>
