--- a/demo/src/app/components/+typeahead/demos/async/async.html
+++ b/demo/src/app/components/+typeahead/demos/async/async.html
@@ -7,5 +7,8 @@
        [typeaheadOptionsLimit]="7"
        typeaheadOptionField="name"
        placeholder="Locations loaded with timeout"
+       aria-autocomplete="list"
+       role="combobox"
+       aria-haspopup="true"
        class="form-control">
 <div *ngIf="typeaheadLoading">Loading</div>
